--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul class="catogry">
         <div class="head">
-            <h1 >nuray gulbeyaz </h1>
+            <h1 >exgf </h1>
             <h3>psikoljik danisman</h3>
         </div>
        
