--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Psikolog Nuray Gulbeyaz(a.k.a. azizinesi)</title>
+    <title>Psikolog sayfasu(a.k.a. azizinesi ,eski,)</title>
 </head>
 <body>
     <ul class="catogry">
