Add dynamic image scrolling feature and update HTML structure

--- a/counter/index.html
+++ b/counter/index.html
@@ -1,13 +1,83 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Scroll ile Resim Değiştirme</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div>
+      <h1>wellcome</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi eaque
+        voluptate laboriosam maiores fuga optio perspiciatis nam? Quisquam
+        aspernatur laudantium quibusdam, excepturi labore dolorum, ea esse,
+        culpa laboriosam exercitationem soluta?
+      </p>
+    </div>
+
+    <div>
+      <h2>about us</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo
+        rerum praesentium totam magnam voluptates quidem itaque earum quas
+        nobis? Quia quas aliquid optio, voluptas esse deleniti nobis earum
+        debitis recusandae.
+      </p>
+    </div>
+    <div>
+      <h3>hizmetler</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates at
+        dolorum earum eum, labore quam optio provident qui fugiat in esse
+        veritatis officia facere soluta. Rem ducimus soluta repellat at. Lorem
+        ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corporis
+        repudiandae nesciunt voluptatibus accusamus quis sapiente, beatae quo in
+        atque harum veritatis fugiat culpa? Necessitatibus distinctio reiciendis
+        cumque dicta consectetur.
+      </p>
+    </div>
+    <ul>
+      <li>hizmetler</li>
+      <li>hizmetler</li>
+      <li>hizmetler</li>
+      <li>hizmetler</li>
+    </ul>
+    <a href="#">see more</a>
+    <div class="image-container">
+      <img id="dynamicImage" src="img/1.jpg" alt="Scrolling Image" />
+    </div>
+    <div>
+      <h4>projects</h4>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+        praesentium consectetur incidunt deleniti voluptas, alias aut excepturi
+        velit soluta aliquam architecto ex quas odit et doloribus! Deleniti,
+        exercitationem tenetur. Cupiditate.
+      </p>
+    </div>
+    <div>
+      <a href="/building.html"> <img src="#" alt="projects" /></a>
+      <a href="/building.html"> <img src="#" alt="projects" /></a>
+      <a href="/building.html"> <img src="#" alt="projects" /></a>
+    </div>
+    <a href="/building.html">see more</a>
+
+    <div>
+      <h3>partners</h3>
+      <img src="#" alt="referans" />
+      <img src="#" alt="referans" />
+      <img src="#" alt="referans" />
+      <img src="#" alt="referans" />
+    </div>
+
+    <footer>
+      <a href="#">send mail</a>
+      <p>&copy; ozkan insaat 2025</p>
+    </footer>
+    <a href="#" class="floating-button">📞</a>
+
+    <script src="script.js"></script>
   </body>
 </html>
