Remove unused files and components from the React app

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
       </p>
     </div>
     <div>
+      <a href="building.html">see 3D <img src="#" alt="projects" /></a>
+      <a href="building.html">see 3D <img src="#" alt="projects" /></a>
+
+      <a href="building.html">see 3D <img src="#" alt="projects" /></a>
+
+      <a href="building.html">see 3D <img src="#" alt="projects" /></a>
+      <a href="building.html">see 3D</a>
+      <a href="building.html">see 3D</a>
+      <a href="building.html">see 3D</a>
+      <p>building</p>
+
       <a href="/building.html"> <img src="#" alt="projects" /></a>
       <a href="/building.html"> <img src="#" alt="projects" /></a>
       <a href="/building.html"> <img src="#" alt="projects" /></a>
