Update footer link text in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <footer>
-      <a href="#">send mail</a>
+      <a href="#">mail adress</a>
       <p>&copy; ozkan insaat 2025</p>
     </footer>
     <a href="#" class="floating-button">📞</a>
